Mar 16, 2007

  * TS: Extended observation analysis (abstract interpretation)
	to deal with disjunctions. With Paolo Tacchella.

Mar 14, 2007

  * TS: Renamed hprolog:substitute/4 to substitute_eq/4, because of
	name conflict with library(edit).

Mar 12, 2007

  * TS: Use line numbers in error and warning messages.

Mar 8, 2007

  * TS: Added maintenance of line numbers through CHR compilation
	as an option: chr_option(line_numbers,on).

Mar 5, 2007

  * TS: Bug fix: setarg/3 instantiation error reported by Mike Elston.
	Caused by missing suspension argument in debug off, optimize off
	mode.

Feb 22, 2007

 * LDK: O(1) removal from hashtables, with experimental
        chr_option(ht_removal,on).

Jan 25, 2007

 * PVW: Bugfixes for optional use of CHR constraints in rule guards.

Jan 18, 2007

  * PVW: Optional use of CHR constraints in rule guards.

Nov 20, 2006

  * TS: Bug fix in compiler_errors.pl.

Oct 25, 2006

  * TS: Bug fix in occurrence subsumption by Jon Sneyers.

Oct 18, 2006

  * TS: New preprocessor feature.

  * TS: Parametrization of experimental chr_identifier type.

Oct 16, 2006

  * TS: More inlining.

  * TS: Stronger static type checking.

  * TS: Omitted buggy FD analysis from bootstrapping process.

Oct 12, 2006

  * TS: More inlining.

  * TS: Experimental chr_identifier type.

Oct 10, 2006

  * TS: Allow for empty type definitions aka phantom types. These are 
	useful for some type-level tricks. A warning is issued so the 
	user can check whether a phantom type is intended. No other
	phantom type-specific checks are in place yet.

  * TS: Fixed static type checking of built-in types.

Oct 9, 2006

  * TS: The dense_int type can now appear on the rhs of type alias
	definitions.

Oct 3, 2006

  * TS: Fixed bug concerning matchings between ground and possibly
 	non-ground arguments.	

Oct 2, 2006

  * TS: Fixed a bug in code generation, overeager removal of a clause.

Sep 28, 2006

  * TS: Refactored some code.

Sep 22, 2006
